resplit the dataset

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -130,7 +130,7 @@
     "    prepare_phomt(\n",
     "        root_folder=r\"D:\\PhoMT\",  # ✅ đường dẫn gốc chứa folder \"detokenization\"\n",
     "        output_path=\"phomt_cleaned.json\",\n",
-    "        combine_all=True  # Nếu muốn chia nhỏ theo split thì đặt False\n",
+    "        combine_all=False  # Nếu muốn chia nhỏ theo split thì đặt False\n",
     "    )"
    ]
   }
